# pkg-count

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  error.c  main.c
formats/: apt.c  flatpak.c  flatpak.h  none.c  pacman.c  portage.c  portage.h  snap.c
src/: error.c  error.h  main.c
src/formats/: apt.c  flatpak.c  pacman.c  rpm.c  snap.c
src/formats/arch/: pacman.c
src/formats/debian/: apt.c
src/formats/dpkg/: apt.c  apt.h
src/formats/fedora/: rpm.c
src/formats/flatpak/: flatpak.c
src/formats/none/: none.c
src/formats/snap/: snap.c  snap.h
